# Comp308-Final-Project

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  glew32.dll.old
assets/: room.blend
shaders/: colourpick_frag.glsl  colourpick_vert.glsl  cubemap_frag.glsl  cubemap_vertex.glsl  phong_frag.glsl  sfrag.glsl  svert.glsl  vert.glsl
src/: CMakeLists.txt  HeightField.cpp  HeightField.h  Mesh.cpp  Mesh.hpp  Triangle.cpp  Triangle.hpp  define.h  loadAssets.cpp  loadAssets.hpp  loadShader.cpp  loadShader.h  main.cpp  sphere.cpp  sphere.h
